--- a/AI/test.ipynb
+++ b/AI/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -24,7 +24,7 @@
        "'1.1.2'"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,37 +35,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "d:\\personal_projects\\diabetes classifier\\web-diabetes-classifier\\env\\lib\\site-packages\\sklearn\\base.py:329: UserWarning: Trying to unpickle estimator DecisionTreeClassifier from version 1.1.1 when using version 1.1.2. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
-      "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
-      "  warnings.warn(\n",
-      "d:\\personal_projects\\diabetes classifier\\web-diabetes-classifier\\env\\lib\\site-packages\\sklearn\\base.py:329: UserWarning: Trying to unpickle estimator RandomForestClassifier from version 1.1.1 when using version 1.1.2. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
-      "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
-      "  warnings.warn(\n",
-      "d:\\personal_projects\\diabetes classifier\\web-diabetes-classifier\\env\\lib\\site-packages\\sklearn\\base.py:329: UserWarning: Trying to unpickle estimator SimpleImputer from version 1.1.1 when using version 1.1.2. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
-      "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
-      "  warnings.warn(\n",
-      "d:\\personal_projects\\diabetes classifier\\web-diabetes-classifier\\env\\lib\\site-packages\\sklearn\\base.py:329: UserWarning: Trying to unpickle estimator StandardScaler from version 1.1.1 when using version 1.1.2. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
-      "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
-      "  warnings.warn(\n",
-      "d:\\personal_projects\\diabetes classifier\\web-diabetes-classifier\\env\\lib\\site-packages\\sklearn\\base.py:329: UserWarning: Trying to unpickle estimator Pipeline from version 1.1.1 when using version 1.1.2. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
-      "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
-      "  warnings.warn(\n",
-      "d:\\personal_projects\\diabetes classifier\\web-diabetes-classifier\\env\\lib\\site-packages\\sklearn\\base.py:329: UserWarning: Trying to unpickle estimator OrdinalEncoder from version 1.1.1 when using version 1.1.2. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
-      "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
-      "  warnings.warn(\n",
-      "d:\\personal_projects\\diabetes classifier\\web-diabetes-classifier\\env\\lib\\site-packages\\sklearn\\base.py:329: UserWarning: Trying to unpickle estimator ColumnTransformer from version 1.1.1 when using version 1.1.2. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
-      "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
-      "  warnings.warn(\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "with open('model.pickle', \"rb\") as input_file:\n",
     "    model = pickle.load(input_file)\n",
@@ -79,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -146,8 +118,8 @@
        "</div>"
       ],
       "text/plain": [
-       "  Age Gender Polyuria Polydipsia sudden weight loss weakness Polyphagia  \\\n",
-       "0  40   Male       No        Yes                 No      Yes         No   \n",
+       "   Age Gender Polyuria Polydipsia sudden weight loss weakness Polyphagia  \\\n",
+       "0   40   Male       No        Yes                 No      Yes         No   \n",
        "\n",
        "  Genital thrush visual blurring Itching Irritability delayed healing  \\\n",
        "0             No              No     Yes           No             Yes   \n",
@@ -156,7 +128,7 @@
        "0              No              Yes      Yes     Yes  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,16 +139,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X = preprocess.fit_transform(X)"
+    "X = preprocess.transform(X)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.6613669,  1.       ,  0.       ,  1.       ,  0.       ,\n",
+       "         1.       ,  0.       ,  0.       ,  0.       ,  1.       ,\n",
+       "         0.       ,  1.       ,  0.       ,  1.       ,  1.       ,\n",
+       "         1.       ]])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +189,7 @@
        "1"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +208,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.5 ('env': venv)",
+   "display_name": "env",
    "language": "python",
    "name": "python3"
   },
@@ -227,12 +222,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.7 (tags/v3.8.7:6503f05, Dec 21 2020, 17:59:51) [MSC v.1928 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "0f3c5eddd88abc457ef5eb1095d5cee9499bcec5c23b6cb0c304f54146c18e76"
+    "hash": "9ba10bba6d68f6461f802a6215d2f80468a6f0fa6770f01b7bf160a21f24f413"
    }
   }
  },
